# vym

./: .clang-format  CMakeLists.txt  INSTALL.txt  LICENSE.txt  README-layout.md  README.md  README.txt  aboutdialog.cpp  aboutdialog.h  activetasksfiltermodel.cpp  activetasksfiltermodel.h  adaptormodel.cpp  adaptormodel.h  adaptorvym.cpp  adaptorvym.h  animpoint.cpp  animpoint.h  arrowobj.cpp  arrowobj.h  attribute.cpp  attribute.h  attributedelegate.cpp  attributedelegate.h  attributedialog.cpp  attributedialog.h  attributedialog.ui  attributeitem.cpp  attributeitem.h  attributewidget.cpp  attributewidget.h  branchitem.cpp  branchitem.h  branchobj.cpp  branchobj.h  branchpropeditor.cpp  branchpropeditor.h  branchpropeditor.ui  branchpropwindow.cpp  branchpropwindow.h  branchpropwindow.ui  (+239 more)
cmake/: Findcppcheck.cmake
config/: io.github.insilmaril.vym.appdata.xml  vym.desktop  vym.xml
demos/: ao-report-example.vym  default-dark.vym  default.vym  frames.vym  iterating-branches.vys  lifeforms.vym  math.vym  new-flags.vym  task-management.vym  time-management.vym  vym-contribute.vym  vym-projectplan.vym  vym-projectplan.vym~
demos/scripts/: examplescript.vys  export-image.vys  iterating-branches.vys  setSelectionBoxDarkTheme.vys  strip-url.vys
doc/: architecture-notes.md
doc/devel/: README-layout.md  xml-changes.md
exports/: orange-blue.conf
exports/template-orange-blue/: content-template.xml  content.xml  meta.xml  page-template.xml  settings.xml  styles.xml
exports/template-orange-blue/Pictures/CVS/: Entries  Repository  Root
exports/template-orange-blue/Thumbnails/CVS/: Entries  Repository
forms/: attributewidget.ui  background-dialog.ui  branchpropeditor.ui  confluence-settings-dialog.ui  confluence-userdialog.ui  darktheme-settings-dialog.ui  default-map-settings-dialog.ui  editxlinkdialog.ui  export-confluence-dialog.ui  export-html-dialog.ui  exportxhtmldialog.ui  extrainfodialog.ui  historywindow.ui  jira-settings-dialog.ui  lockedfiledialog.ui  scripteditor.ui  showtextdialog.ui  userdialog.ui  warningdialog.ui  zip-settings-dialog.ui
lang/: vym.cs_CZ.ts  vym.de.ts  vym.de_DE.ts  vym.el.ts  vym.en.ts  vym.es.ts  vym.fr.ts  vym.hr_HR.ts  vym.ia.ts  vym.it.ts  vym.ja.ts  vym.pt_BR.ts  vym.ru.ts  vym.sv.ts  vym.zh_CN.ts  vym.zh_TW.ts  vym_cs_CZ.ts  vym_de_DE.ts  vym_el.ts  vym_en.ts  vym_es.ts  vym_fr.ts  vym_ia.ts  vym_it.ts  vym_ja.ts  vym_pt_BR.ts  vym_ru.ts  vym_sv.ts  vym_zh_CN.ts  vym_zh_TW.ts
macros/: macro-01.vys  macro-02.vys  macro-03.vys  macro-04.vys  macro-05.vys  macro-06.vys  macro-07.vys  macro-08.vys  macro-09.vys  macro-1.vys  macro-10.vys  macro-11.vys  macro-12.vys  macro-3.vys  macro-4.vys  macro-5.vys  macro-6.vys  macro-8.vys  macro-9.vys  macro-s01.vys  macro-s02.vys  macro-s03.vys  macro-s04.vys  macro-s05.vys  macro-s06.vys  macro-s07.vys  macro-s08.vys  macro-s09.vys  macro-s10.vys  macro-s11.vys  macro-s12.vys  macros.vys  slideeditor-snapshot.vys
scripts/: BugzillaClient.pm  bugger  confluence.rb  getbinaries  jigger  make-qrc.rb  makedist-vym  screencast  text-export-reformat.awk  vivym  vym-addmail.rb  vym-ruby.rb
src/: aboutdialog.cpp  aboutdialog.h  adaptormodel.cpp  adaptormodel.h  adaptorvym.cpp  adaptorvym.h  animpoint.cpp  animpoint.h  arrowobj.cpp  arrowobj.h  attribute-wrapper.cpp  attribute-wrapper.h  attribute.cpp  attributedelegate.cpp  attributedelegate.h  attributedialog.cpp  attributedialog.h  attributeitem.cpp  attributeitem.h  attributewidget.cpp  background-dialog.cpp  background-dialog.h  branch-container-base.cpp  branch-container-base.h  branch-container.cpp  branch-container.h  branch-wrapper.cpp  branch-wrapper.h  branchitem.cpp  branchitem.h  branchobj.cpp  branchobj.h  branchpropeditor.cpp  branchpropeditor.h  codeeditor.cpp  codeeditor.h  command.cpp  command.h  confluence-agent.cpp  confluence-agent.h  (+240 more)
src/dbus/: adaptormodel.cpp  adaptormodel.h  adaptorvym.cpp
styles/: kdebookmarks2vym.xsl  vym.css  vym2kdebookmarks.xsl  vym2taskjuggler.xsl
test/: default.vym  example-2.4.0.vym  example-pre-2.9.500-positions.xml  note-plain.txt  note-richtext.xml  note.txt  start-internal-tests.sh  start-ruby-tests-legacy.sh  start-ruby-tests.sh  start-test.sh  start-vym.sh  test-frames.vym  test-legacy-text.xml  test-slides.xml  test-userflag.vym  vym-selftest.vys  vym-test-legacy.rb  vym-test.rb
test/maps/: test-attributes.xml  test-default.vym  test-frames.vym  test-tasks.xml
test/maps/freeplane/: freeplaneFunctions.mm
test/maps/legacy/: external-note-plaintext.txt  external-note-richtext.html  faq-2.5.21.xml  legacy-text-2.4.0.xml  lifeforms-2.1.11.vym  notes-1.4.x.xml  notes.xml  time-management-1.13.33.vym  vym-contribute-2.7.520.vym  xlinks.xml
test/notes/: note.html
tex/: commands.tex  help.tex  vym.tex  vym_es.tex  vym_fr.lyx  vym_fr.tex
tex/examples/: branches.vym  macros.vym  windows-main.vym  windows.vym  xlinks.vym
